# gestao-os

./: README.md  pyproject.toml
apps/clients/: models.py  serializers.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/comments/: models.py  urls.py
apps/comments/migrations/: 0001_initial.py
apps/service_orders/: apps.py  models.py  urls.py
apps/service_orders/migrations/: 0001_initial.py
apps/technicians/: models.py  serializers.py  urls.py  views.py
apps/technicians/migrations/: 0001_initial.py  0002_alter_technician_email.py
config/: settings.py  urls.py
