[project]
name = "gestao-os"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Bressanelli",email = "rbressanelli@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
